[gd_scene load_steps=3 format=3 uid="uid://43uuxv7mhc08"]

[ext_resource type="Script" uid="uid://dr8a80niv2ae8" path="res://src/game_screens/battle_screen.gd" id="1_36hs7"]
[ext_resource type="PackedScene" uid="uid://c3nn8w6dsajke" path="res://src/actors/player.tscn" id="2_gl2eh"]

[node name="BattleScreen" type="Node2D"]
script = ExtResource("1_36hs7")
template_entity_deck = Array[String](["Ginko", "Golem", "Pixie", "Hibiki", "Haru"])
template_effect_deck = Array[String](["Knife", "Mortar", "Bite", "Plate", "Medkit", "Parry", "Treasure", "Switcheroo", "Reshuffler"])

[node name="Players" type="Node" parent="."]

[node name="Player1" parent="Players" instance=ExtResource("2_gl2eh")]

[node name="Player2" parent="Players" instance=ExtResource("2_gl2eh")]

[node name="CenterPoint" type="Marker2D" parent="."]
position = Vector2(960, 540)
